--- a/test.org
+++ b/test.org
@@ -1,22 +1,71 @@
 
 
+* 临时 [0/2]
+** TODO mtp驱动
+** TODO 潘陈军
+ - 高通 fae 名字 : 张延伟 杨洋（刚下飞机）
+ - 小黄整理的问题 -> 和高通沟通 -> 开始干活
+ - 图片&问题点在 C:\peter\2p7
+ - 最新的参数在 C:\peter\2p7\head
+******************************************* 明天中午去自助餐厅吃
+
 
 * 项目
-** PD1616 [0/2]                                                       :works:
- - [-] 两套参数接口 [2/3]
-   - [X] 拟制方案
-     项目宏控
-   - [X] 发邮件确认
-     + 标准
-     + 接口事宜
-     + 例子图片
-   - [ ] 执行
- - [ ] otp 偏差
+** PD1616 [5/7]                                                       :works:
+*** TODO 和安奇逻辑沟通 [2/2]
+ - [X] 问题点图片是没图片，还是不清楚图片里边是什么问题
+   - 没有图片
+   - 不知道图片的问题是什么
+ - [X] 录像的找小刚提供
+*** TODO otp 偏差 [0/2]
+ - [ ] 查看计算方式
+ - [ ] 验证
+*** DONE 修改宏控 : 和1616相关的地方都加上 "PD1624"
+*** DONE awb bug 解决时间（按场景分）[2/2]
+ - [X] 对比两份bug，给到金杰
+ - [X] 要求按场景，给出解决时间
+*** DONE 找旷伟安排 2016.10.11( 明天 ) 日出 ( 偏蓝 ) [3/3]
+ - [X] 发单
+ - [X] 刷机
+ - [X] push 库文件并验证 exif 信息
+*** DONE [B161009-455] [2/2]
+ - [X] 刷机
+ - [X] 验证
+ - 转给杨涛看
+*** DONE [B160930-465] [2/2]
+ - [X] 刷机
+ - [X] 验证
+ - 下一版设成自动关闭
 
-** PD1617 [2/2]                                                       :works:
- - [X] 寄往日本的 golden 手机状态
+
+** PD1616LG4 [2/3]                                                    :works:
+*** TODO 两套参数接口 [2/3]
+ - [X] 拟制方案
+   项目宏控
+ - [X] 发邮件确认
+   + 标准
+   + 接口事宜
+   + 例子图片
+ - [ ] 执行
+*** DONE Shading问题 [4/4]
+ - [X] 用最新每日编译试试看 shading 问题
+   - 还是有 shading 问题
+ - [X] 确认算法库是否调用到专用的
+   - 调用到了
+ - [X] 改 meshrolloff 试试
+   - 有用
+ - [X] 问陈军怎么解: LG4 不用这个功能 还是找问题出在哪
+   - 陈军 : LG4 改成不用
+*** DONE [B161010-854] [2/2]
+ - [X] 刷机
+ - [X] 验证
+   - 验证不出来，转给求明
+
+
+** PD1617 [3/3]                                                       :works: 
+*** DONE 寄往日本的 golden 手机状态
     PD1617_A_A09.30.07
- - [X] porting checklist [11/11]
+*** DONE porting checklist [11/11]
    - [X] 验证、添加项目宏控
    - [X]  区分前后置
    - [X]  device-vendor.mk
@@ -28,5 +77,9 @@
    - [X]  otp->wbc
    - [X]  led calibration
    - [X]  mcas
+*** DONE 2016.10.10 给出 golden
+
+
+
 
 
