--- a/test.org
+++ b/test.org
@@ -1,17 +1,25 @@
 
 
-* 临时 [0/2]
+* 临时 [4/6]
 ** TODO mtp驱动
-** TODO 潘陈军
+** TODO expand-region以及其他插件
+** DONE 潘陈军
  - 高通 fae 名字 : 张延伟 杨洋（刚下飞机）
  - 小黄整理的问题 -> 和高通沟通 -> 开始干活
  - 图片&问题点在 C:\peter\2p7
  - 最新的参数在 C:\peter\2p7\head
-******************************************* 明天中午去自助餐厅吃
+** DONE 取临时厂牌
+** DONE 找刘海兵刷机(pd1616a)
+** DONE 放行单 [4/4]
+- [X] 找柳桂林贴保密封条
+- [X] 在放行单中添加已贴保密封条
+- [X] 1616至10.30
+- [X] 1619至12.15
+
 
 
 * 项目
-** PD1616 [5/7]                                                       :works:
+** PD1616 [4/7]                                                       :works:
 *** TODO 和安奇逻辑沟通 [2/2]
  - [X] 问题点图片是没图片，还是不清楚图片里边是什么问题
    - 没有图片
@@ -28,26 +36,22 @@
  - [X] 发单
  - [X] 刷机
  - [X] push 库文件并验证 exif 信息
-*** DONE [B161009-455] [2/2]
+*** TODO [B161009-455] 手动白平衡 2300K [3/4]                          :bugs:
  - [X] 刷机
  - [X] 验证
  - 转给杨涛看
-*** DONE [B160930-465] [2/2]
+ - 已告知求明，杨涛
+ - 已告知安奇逻辑
+ - [X] set_parm_whitebalance 不应该被调用到 
+ - [ ] 处理不了，交给安奇逻辑
+*** DONE [B160930-465] log管控 [2/2]                                   :bugs:
  - [X] 刷机
  - [X] 验证
  - 下一版设成自动关闭
 
 
-** PD1616LG4 [2/3]                                                    :works:
-*** TODO 两套参数接口 [2/3]
- - [X] 拟制方案
-   项目宏控
- - [X] 发邮件确认
-   + 标准
-   + 接口事宜
-   + 例子图片
- - [ ] 执行
-*** DONE Shading问题 [4/4]
+** PD1616LG4 [0/2]                                                    :works:
+*** TODO [B160922-269] 像面色彩均匀度 [2/4]                            :bugs:
  - [X] 用最新每日编译试试看 shading 问题
    - 还是有 shading 问题
  - [X] 确认算法库是否调用到专用的
@@ -56,10 +60,23 @@
    - 有用
  - [X] 问陈军怎么解: LG4 不用这个功能 还是找问题出在哪
    - 陈军 : LG4 改成不用
-*** DONE [B161010-854] [2/2]
+ - [X] 提供 meshrolloff 的版本
+ - [ ] 提供 f3 版本 + no_meshrolloff 给廖秒干
+**** TODO 两套参数接口 [3/4]
+ - [X] 拟制方案
+   项目宏控
+ - [X] 发邮件确认
+   + 标准
+   + 接口事宜
+   + 例子图片
+ - [X] 提供无法开机的log
+ - [ ] 执行
+*** TODO [B161010-854] 调节曝光补偿 [3/4]                              :bugs:
  - [X] 刷机
  - [X] 验证
    - 验证不出来，转给求明
+ - [X] 求明:3a段错误
+ - [ ] 祥玉:加兼容
 
 
 ** PD1617 [3/3]                                                       :works: 
