--- a/test.org
+++ b/test.org
@@ -1,8 +1,35 @@
 
+她喜欢我
+还有时间
+我能反杀
 
-* 临时 [4/6]
-** TODO mtp驱动
+
+* 出差长安记得带回去的
+ - [ ] 台式机 x2
+ - [ ] 插板 x1
+ - [ ] 充电头 x1
+ - [ ] 数据线 x2 （康丽 x1 ）
+
+
+* 临时 [6/12]
+** TODO 修改答辩ppt
+*** TODO 例子加上数据、对比   多加几个例子
+**** TODO PD1515BA清晰度噪点
+ - [X] 借机
+ - [ ] 改参数
+ - [ ] 拍照
+**** TODO 1419CL 偏色
+** TODO 移动行
+** TODO 注释
 ** TODO expand-region以及其他插件
+** TODO 擦白版
+** TODO excel
+ - [X] 计算公式（快捷键）
+ - [X] 最大值
+ - [ ] 数据 -> 变化图
+** DONE 问石梦云win7的主题
+ - 搜狗的“图标整理器”
+** DONE mtp驱动
 ** DONE 潘陈军
  - 高通 fae 名字 : 张延伟 杨洋（刚下飞机）
  - 小黄整理的问题 -> 和高通沟通 -> 开始干活
@@ -19,15 +46,33 @@
 
 
 * 项目
-** PD1616 [4/7]                                                       :works:
-*** TODO 和安奇逻辑沟通 [2/2]
+** PD1616 [10/10]                                                     :works:
+*** DONE very_limit -> 旷伟 （给到模组和手机）
+室外（上下午都可以，不要晚上）
+室内（办公室）
+模拟kfc
+灯箱标准光源（色卡）
+ - 已发单
+*** DONE 和安奇逻辑沟通 [2/2]
  - [X] 问题点图片是没图片，还是不清楚图片里边是什么问题
    - 没有图片
    - 不知道图片的问题是什么
  - [X] 录像的找小刚提供
-*** TODO otp 偏差 [0/2]
- - [ ] 查看计算方式
- - [ ] 验证
+*** DONE otp 偏差 [4/4]
+ - [X] 问安奇逻辑能否关掉
+   - 已提供库文件
+ - [X] 借机复现
+ - [X] 对比效果
+ - [X] 讨论对策
+   - 如果A光源可靠，不作处理
+   - 如果A光源不可靠，使用一点校准替换之前使用的二点校准
+*** DONE otp管控范围之外（模组厂管控之内）[3/3]
+ - [X] 和安奇逻辑确认验证方法
+   - 需要提供模组拍 raw 图片确认是否在算法逻辑之内
+ - [X] 问程传波拿到模组
+   - 已经给潘陈军了
+ - [X] 问潘陈军拿到模组
+ - 已找到偏差最大的模组（7#）并交给安奇逻辑
 *** DONE 修改宏控 : 和1616相关的地方都加上 "PD1624"
 *** DONE awb bug 解决时间（按场景分）[2/2]
  - [X] 对比两份bug，给到金杰
@@ -36,22 +81,25 @@
  - [X] 发单
  - [X] 刷机
  - [X] push 库文件并验证 exif 信息
-*** TODO [B161009-455] 手动白平衡 2300K [3/4]                          :bugs:
+*** DONE [B161009-455] 手动白平衡 2300K [4/4]                          :bugs:
  - [X] 刷机
  - [X] 验证
  - 转给杨涛看
  - 已告知求明，杨涛
  - 已告知安奇逻辑
  - [X] set_parm_whitebalance 不应该被调用到 
- - [ ] 处理不了，交给安奇逻辑
+ - [X] 处理不了，交给安奇逻辑
+   - 已做兼容
 *** DONE [B160930-465] log管控 [2/2]                                   :bugs:
  - [X] 刷机
  - [X] 验证
  - 下一版设成自动关闭
+*** DONE [B161011-671] 调节曝光补偿                                    :bugs:
+ - 同 B161010-854 已做规避
 
 
-** PD1616LG4 [0/2]                                                    :works:
-*** TODO [B160922-269] 像面色彩均匀度 [2/4]                            :bugs:
+** PD1616LG4 [2/2]                                                    :works:
+*** DONE [B160922-269] 像面色彩均匀度 [1/1]                            :bugs:
  - [X] 用最新每日编译试试看 shading 问题
    - 还是有 shading 问题
  - [X] 确认算法库是否调用到专用的
@@ -61,8 +109,9 @@
  - [X] 问陈军怎么解: LG4 不用这个功能 还是找问题出在哪
    - 陈军 : LG4 改成不用
  - [X] 提供 meshrolloff 的版本
- - [ ] 提供 f3 版本 + no_meshrolloff 给廖秒干
-**** TODO 两套参数接口 [3/4]
+ - [X] 提供 f3 版本 + no_meshrolloff 给廖秒干
+   - 进入相机方式不同颜色差异很大
+**** DONE 两套参数接口 [4/4]
  - [X] 拟制方案
    项目宏控
  - [X] 发邮件确认
@@ -70,13 +119,13 @@
    + 接口事宜
    + 例子图片
  - [X] 提供无法开机的log
- - [ ] 执行
-*** TODO [B161010-854] 调节曝光补偿 [3/4]                              :bugs:
+ - [X] 换成读取系统属性
+*** DONE [B161010-854] 调节曝光补偿 [4/4]                              :bugs:
  - [X] 刷机
  - [X] 验证
    - 验证不出来，转给求明
  - [X] 求明:3a段错误
- - [ ] 祥玉:加兼容
+ - [X] 祥玉:加规避
 
 
 ** PD1617 [3/3]                                                       :works: 
