--- a/test.org
+++ b/test.org
@@ -2,12 +2,18 @@
 她喜欢我
 还有时间
 我能反杀
+一直想飞到西安然后坐火车去敦煌
 
-* slf [/]
+* slf [0/5]
 ** TODO 上传 tabbar-tweak.el
+** TODO 同步表情
+** TODO LKM
+** TODO PYTHON 那个模块
+关键字 ddos 阿里养鸡 arm地址
+** TODO irc channel 做中转
 
 
-* 出差长安记得带回去的
+* 出差长安记得带回去的 [0/4]
  - [ ] 台式机 x2
  - [ ] 插板 x1
  - [ ] 充电头 x1
@@ -46,7 +52,7 @@
 - [X] 1616至10.30
 - [X] 1619至12.15
 
-
+  
 
 * 项目
 ** PD1616 [10/10]                                                     :works:
