--- a/test.org
+++ b/test.org
@@ -1,53 +1,70 @@
 
+* priv
 她喜欢我
 还有时间
 我能反杀
 一直想飞到西安然后坐火车去敦煌
 
-* slf [0/6]
-** TODO 上传 tabbar-tweak.el
-** TODO 同步表情
-** TODO LKM
-** TODO PYTHON 那个模块
+** slf [2/6]
+*** TODO 同步表情
+*** TODO LKM
+*** TODO PYTHON 那个模块
 关键字 ddos 阿里养鸡 arm地址
-** TODO irc channel 做中转
-
-** TODO 转换添加 mid 到看代码的列表里
-
-* 出差长安记得带回去的 [0/4]
- - [ ] 台式机 x2
- - [ ] 插板 x1
- - [ ] 充电头 x1
- - [ ] 数据线 x2 （康丽 x1 ）
+*** TODO irc channel 做中转
+*** DONE 转换添加 mid 到看代码的列表里
+*** DONE 上传 tabbar-tweak.el
 
 
-* 临时 [12/12]
-** DONE 修改答辩ppt
-*** DONE 例子加上数据、对比   多加几个例子
-**** DONE PD1515BA清晰度噪点
- - [X] 借机
- - [X] 改参数
- - [X] 拍照
-**** DONE 1419CL 偏色
-** DONE 擦白版
-** DONE excel
- - [X] 计算公式（快捷键）
- - [X] 最大值
- - [X] 数据 -> 变化图
-** DONE expand-region以及其他插件
-** DONE 注释
-** DONE 移动行
-** DONE 问石梦云win7的主题
- - 搜狗的“图标整理器”
-** DONE mtp驱动
-** DONE 潘陈军
- - 高通 fae 名字 : 张延伟 杨洋（刚下飞机）
- - 小黄整理的问题 -> 和高通沟通 -> 开始干活
- - 图片&问题点在 C:\peter\2p7
- - 最新的参数在 C:\peter\2p7\head
-** DONE 取临时厂牌
-** DONE 找刘海兵刷机(pd1616a)
-** DONE 放行单 [4/4]
+* pub
+
+** 出差长安记得带回去的 [0/5]
+  - [ ] 台式机 x2
+  - [ ] 插板 x1
+  - [ ] 充电头 x1
+  - [ ] 数据线 x3 （康丽 x1 ）
+  - [ ] PD1415D PD1415BA
+#+CONSTANTS: pi=3.141592654
+| student | math | pyh | mean | pi number |
+|---------+------+-----+------+-----------|
+| b哈哈   |   13 |  09 |   11 | #ERROR    |
+| h       |   15 |  14 | 14.5 | #ERROR    |
+| a       |   17 |  13 |   15 | #ERROR    |
+#+TBLFM: $4=vmean($2..$3)::$5='(round $4)
+$5='(number-to-string $pi)
+$5='(substring (number-to-string $pi) (round $4) (1+ (round $4)));N
+
+
+
+
+
+
+** 临时 [12/12]
+*** DONE 修改答辩ppt
+**** DONE 例子加上数据、对比   多加几个例子
+***** DONE PD1515BA清晰度噪点
+  - [X] 借机
+  - [X] 改参数
+  - [X] 拍照
+***** DONE 1419CL 偏色
+*** DONE 擦白版
+*** DONE excel
+  - [X] 计算公式（快捷键）
+  - [X] 最大值
+  - [X] 数据 -> 变化图
+*** DONE expand-region以及其他插件
+*** DONE 注释
+*** DONE 移动行
+*** DONE 问石梦云win7的主题
+  - 搜狗的“图标整理器”
+*** DONE mtp驱动
+*** DONE 潘陈军
+  - 高通 fae 名字 : 张延伟 杨洋（刚下飞机）
+  - 小黄整理的问题 -> 和高通沟通 -> 开始干活
+  - 图片&问题点在 C:\peter\2p7
+  - 最新的参数在 C:\peter\2p7\head
+*** DONE 取临时厂牌
+*** DONE 找刘海兵刷机(pd1616a)
+*** DONE 放行单 [4/4]
 - [X] 找柳桂林贴保密封条
 - [X] 在放行单中添加已贴保密封条
 - [X] 1616至10.30
@@ -55,105 +72,111 @@
 
   
 
-* 项目
-** PD1616 [10/10]                                                     :works:
-*** DONE very_limit -> 旷伟 （给到模组和手机）
+** 项目
+*** PD1616 [12/13]                                                    :works:
+**** TODO 把保密外壳的螺钉装上
+**** DONE 拷10.15~10.17的照片
+**** DONE 王永国，明度xxxx
+  - [X] 图片偏暗，问潘陈军
+**** DONE very_limit -> 旷伟 （给到模组和手机）
 室外（上下午都可以，不要晚上）
 室内（办公室）
 模拟kfc
 灯箱标准光源（色卡）
  - 已发单
-*** DONE 和安奇逻辑沟通 [2/2]
- - [X] 问题点图片是没图片，还是不清楚图片里边是什么问题
-   - 没有图片
-   - 不知道图片的问题是什么
- - [X] 录像的找小刚提供
-*** DONE otp 偏差 [4/4]
- - [X] 问安奇逻辑能否关掉
-   - 已提供库文件
- - [X] 借机复现
- - [X] 对比效果
- - [X] 讨论对策
-   - 如果A光源可靠，不作处理
-   - 如果A光源不可靠，使用一点校准替换之前使用的二点校准
-*** DONE otp管控范围之外（模组厂管控之内）[3/3]
- - [X] 和安奇逻辑确认验证方法
-   - 需要提供模组拍 raw 图片确认是否在算法逻辑之内
- - [X] 问程传波拿到模组
-   - 已经给潘陈军了
- - [X] 问潘陈军拿到模组
- - 已找到偏差最大的模组（7#）并交给安奇逻辑
-*** DONE 修改宏控 : 和1616相关的地方都加上 "PD1624"
-*** DONE awb bug 解决时间（按场景分）[2/2]
- - [X] 对比两份bug，给到金杰
- - [X] 要求按场景，给出解决时间
-*** DONE 找旷伟安排 2016.10.11( 明天 ) 日出 ( 偏蓝 ) [3/3]
- - [X] 发单
- - [X] 刷机
- - [X] push 库文件并验证 exif 信息
-*** DONE [B161009-455] 手动白平衡 2300K [4/4]                          :bugs:
- - [X] 刷机
- - [X] 验证
- - 转给杨涛看
- - 已告知求明，杨涛
- - 已告知安奇逻辑
- - [X] set_parm_whitebalance 不应该被调用到 
- - [X] 处理不了，交给安奇逻辑
-   - 已做兼容
-*** DONE [B160930-465] log管控 [2/2]                                   :bugs:
- - [X] 刷机
- - [X] 验证
- - 下一版设成自动关闭
-*** DONE [B161011-671] 调节曝光补偿                                    :bugs:
- - 同 B161010-854 已做规避
+**** DONE 和安奇逻辑沟通 [2/2]
+  - [X] 问题点图片是没图片，还是不清楚图片里边是什么问题
+    - 没有图片
+    - 不知道图片的问题是什么
+  - [X] 录像的找小刚提供
+**** DONE otp 偏差 [4/4]
+  - [X] 问安奇逻辑能否关掉
+    - 已提供库文件
+  - [X] 借机复现
+  - [X] 对比效果
+  - [X] 讨论对策
+    - 如果A光源可靠，不作处理
+    - 如果A光源不可靠，使用一点校准替换之前使用的二点校准
+**** DONE otp管控范围之外（模组厂管控之内）[3/3]
+  - [X] 和安奇逻辑确认验证方法
+    - 需要提供模组拍 raw 图片确认是否在算法逻辑之内
+  - [X] 问程传波拿到模组
+    - 已经给潘陈军了
+  - [X] 问潘陈军拿到模组
+  - 已找到偏差最大的模组（7#）并交给安奇逻辑
+**** DONE 修改宏控 : 和1616相关的地方都加上 "PD1624"
+**** DONE awb bug 解决时间（按场景分）[2/2]
+  - [X] 对比两份bug，给到金杰
+  - [X] 要求按场景，给出解决时间
+**** DONE 找旷伟安排 2016.10.11( 明天 ) 日出 ( 偏蓝 ) [3/3]
+  - [X] 发单
+  - [X] 刷机
+  - [X] push 库文件并验证 exif 信息
+**** DONE [B161009-455] 手动白平衡 2300K [4/4]                         :bugs:
+  - [X] 刷机
+  - [X] 验证
+  - 转给杨涛看
+  - 已告知求明，杨涛
+  - 已告知安奇逻辑
+  - [X] set_parm_whitebalance 不应该被调用到 
+  - [X] 处理不了，交给安奇逻辑
+    - 已做兼容
+**** DONE [B160930-465] log管控 [2/2]                                  :bugs:
+  - [X] 刷机
+  - [X] 验证
+  - 下一版设成自动关闭
+**** DONE [B161011-671] 调节曝光补偿                                   :bugs:
+  - 同 B161010-854 已做规避
 
 
-** PD1616LG4 [2/2]                                                    :works:
-*** DONE [B160922-269] 像面色彩均匀度 [1/1]                            :bugs:
- - [X] 用最新每日编译试试看 shading 问题
-   - 还是有 shading 问题
- - [X] 确认算法库是否调用到专用的
-   - 调用到了
- - [X] 改 meshrolloff 试试
-   - 有用
- - [X] 问陈军怎么解: LG4 不用这个功能 还是找问题出在哪
-   - 陈军 : LG4 改成不用
- - [X] 提供 meshrolloff 的版本
- - [X] 提供 f3 版本 + no_meshrolloff 给廖秒干
-   - 进入相机方式不同颜色差异很大
-**** DONE 两套参数接口 [4/4]
- - [X] 拟制方案
-   项目宏控
- - [X] 发邮件确认
-   + 标准
-   + 接口事宜
-   + 例子图片
- - [X] 提供无法开机的log
- - [X] 换成读取系统属性
-*** DONE [B161010-854] 调节曝光补偿 [4/4]                              :bugs:
- - [X] 刷机
- - [X] 验证
-   - 验证不出来，转给求明
- - [X] 求明:3a段错误
- - [X] 祥玉:加规避
+*** PD1616LG4 [2/2]                                                   :works:
+**** DONE [B160922-269] 像面色彩均匀度 [1/1]                           :bugs:
+  - [X] 用最新每日编译试试看 shading 问题
+    - 还是有 shading 问题
+  - [X] 确认算法库是否调用到专用的
+    - 调用到了
+  - [X] 改 meshrolloff 试试
+    - 有用
+  - [X] 问陈军怎么解: LG4 不用这个功能 还是找问题出在哪
+    - 陈军 : LG4 改成不用
+  - [X] 提供 meshrolloff 的版本
+  - [X] 提供 f3 版本 + no_meshrolloff 给廖秒干
+    - 进入相机方式不同颜色差异很大
+***** DONE 两套参数接口 [4/4]
+  - [X] 拟制方案
+    项目宏控
+  - [X] 发邮件确认
+    + 标准
+    + 接口事宜
+    + 例子图片
+  - [X] 提供无法开机的log
+  - [X] 换成读取系统属性
+**** DONE [B161010-854] 调节曝光补偿 [4/4]                             :bugs:
+  - [X] 刷机
+  - [X] 验证
+    - 验证不出来，转给求明
+  - [X] 求明:3a段错误
+  - [X] 祥玉:加规避
 
 
-** PD1617 [3/3]                                                       :works: 
-*** DONE 寄往日本的 golden 手机状态
-    PD1617_A_A09.30.07
-*** DONE porting checklist [11/11]
-   - [X] 验证、添加项目宏控
-   - [X]  区分前后置
-   - [X]  device-vendor.mk
-   - [X]  工模使用q3a
-   - [X]  prebuilt_HY11
-   - [X]  调用 ext_lib
-   - [X]  roi&face
-   - [X]  aec_param
-   - [X]  otp->wbc
-   - [X]  led calibration
-   - [X]  mcas
-*** DONE 2016.10.10 给出 golden
+*** PD1617 [5/5]                                                      :works:
+**** DONE 给海叔编个库
+**** DONE 添加76pro的代码
+**** DONE 寄往日本的 golden 手机状态
+     PD1617_A_A09.30.07
+**** DONE porting checklist [11/11]
+    - [X] 验证、添加项目宏控
+    - [X]  区分前后置
+    - [X]  device-vendor.mk
+    - [X]  工模使用q3a
+    - [X]  prebuilt_HY11
+    - [X]  调用 ext_lib
+    - [X]  roi&face
+    - [X]  aec_param
+    - [X]  otp->wbc
+    - [X]  led calibration
+    - [X]  mcas
+**** DONE 2016.10.10 给出 golden
 
 
 
