--- a/test.org
+++ b/test.org
@@ -5,7 +5,11 @@
 我能反杀
 一直想飞到西安然后坐火车去敦煌
 
-** slf [2/6]
+** slf [2/7]
+*** TODO 六弄咖啡馆
+    :PROPERTIES:
+    :movie:    must download
+    :END:
 *** TODO 同步表情
 *** TODO LKM
 *** TODO PYTHON 那个模块
@@ -16,29 +20,46 @@
 
 
 * pub
+** table
 
-** 出差长安记得带回去的 [0/5]
+| student | math | pyh | mean | pi number |
+|---------+------+-----+------+-----------|
+| b       |   13 |  09 |   11 |         5 |
+| h       |   15 |  14 | 14.5 |         7 |
+| a       |   17 |  13 |   15 |         9 |
+#+TBLFM: $4=vmean($2..$3)
+#+TBLFM: $5='(substring (number-to-string $pi) (round(string-to-number $4)) (+ 1 (round (string-to-number $4))));    
+#+CONSTANTS: pi=3.1415926535897932384666666666666
+
+| id |              r/g |              b/g |            gb/gr |   distance |
+|----+------------------+------------------+------------------+------------|
+|    | 540.602836879433 | 708.265957446809 | 1028.49290780142 |  1771.8880 |
+|  1 |         0.560547 |         0.629883 |         1.000977 | 0.10865988 |
+|  2 |         0.571289 |         0.642578 |         1.004883 | 0.10854316 |
+|  7 |         0.574219 |         0.637695 |                1 | 0.11745107 |
+#+TBLFM: $5=(((($2*1024/@2$2)-1)^2+(($3*1024/@2$3)-1)^2+(($4*1024/@2$4)-1)^2)^0.5)
+
+** TODO 出差长安记得带回去的 [0/5]
+   SCHEDULED: <2016-10-16 周日>
   - [ ] 台式机 x2
   - [ ] 插板 x1
   - [ ] 充电头 x1
   - [ ] 数据线 x3 （康丽 x1 ）
   - [ ] PD1415D PD1415BA
-#+CONSTANTS: pi=3.141592654
-| student | math | pyh | mean | pi number |
-|---------+------+-----+------+-----------|
-| b哈哈   |   13 |  09 |   11 | #ERROR    |
-| h       |   15 |  14 | 14.5 | #ERROR    |
-| a       |   17 |  13 |   15 | #ERROR    |
-#+TBLFM: $4=vmean($2..$3)::$5='(round $4)
-$5='(number-to-string $pi)
-$5='(substring (number-to-string $pi) (round $4) (1+ (round $4)));N
 
+** 临时 [13/14]
+*** TODO 同步.emacs
+*** DONE qyh_repo_rollback.sh [init|reset] [5/5]
+ - [X] 列举相关的仓
+   $w/kernel
+   $w1
+   $w1sdk
+   $w2
+ - [X] check arguments
+ - [X] check $w
+ - [X] reset 到 init
+ - [X] sync 到 target
 
-
-
-
-
-** 临时 [12/12]
 *** DONE 修改答辩ppt
 **** DONE 例子加上数据、对比   多加几个例子
 ***** DONE PD1515BA清晰度噪点
@@ -70,20 +91,20 @@ $5='(substring (number-to-string $pi) (round $4) (1+ (round $4)));N
 - [X] 1616至10.30
 - [X] 1619至12.15
 
-  
-
 ** 项目
-*** PD1616 [12/13]                                                    :works:
-**** TODO 把保密外壳的螺钉装上
+#+TAGS: @bug(b)
+*** PD1616 [13/13] <2016-07-20 周三>--<2016-10-31 周一>
+**** DONE 把保密外壳的螺钉装上
 **** DONE 拷10.15~10.17的照片
 **** DONE 王永国，明度xxxx
   - [X] 图片偏暗，问潘陈军
-**** DONE very_limit -> 旷伟 （给到模组和手机）
-室外（上下午都可以，不要晚上）
-室内（办公室）
-模拟kfc
-灯箱标准光源（色卡）
- - 已发单
+**** DONE very_limit -> 旷伟 （给到模组和手机）[6/6]
+ - [X] 室外（上下午都可以，不要晚上）
+ - [X] 室内（办公室）
+ - [X] 模拟kfc
+ - [X] 灯箱标准光源（色卡）
+ - [X] 已发单
+ - [X] 拷贝图片给安奇逻辑
 **** DONE 和安奇逻辑沟通 [2/2]
   - [X] 问题点图片是没图片，还是不清楚图片里边是什么问题
     - 没有图片
@@ -112,7 +133,7 @@ $5='(substring (number-to-string $pi) (round $4) (1+ (round $4)));N
   - [X] 发单
   - [X] 刷机
   - [X] push 库文件并验证 exif 信息
-**** DONE [B161009-455] 手动白平衡 2300K [4/4]                         :bugs:
+**** DONE [B161009-455] 手动白平衡 2300K [4/4]                         :@bug:
   - [X] 刷机
   - [X] 验证
   - 转给杨涛看
@@ -121,16 +142,16 @@ $5='(substring (number-to-string $pi) (round $4) (1+ (round $4)));N
   - [X] set_parm_whitebalance 不应该被调用到 
   - [X] 处理不了，交给安奇逻辑
     - 已做兼容
-**** DONE [B160930-465] log管控 [2/2]                                  :bugs:
+**** DONE [B160930-465] log管控 [2/2]                                  :@bug:
   - [X] 刷机
   - [X] 验证
   - 下一版设成自动关闭
-**** DONE [B161011-671] 调节曝光补偿                                   :bugs:
+**** DONE [B161011-671] 调节曝光补偿                                   :@bug:
   - 同 B161010-854 已做规避
 
-
-*** PD1616LG4 [2/2]                                                   :works:
-**** DONE [B160922-269] 像面色彩均匀度 [1/1]                           :bugs:
+    
+*** PD1616LG4 [2/2] <2016-07-20 周三>--<2016-10-31 周一>
+**** DONE [B160922-269] 像面色彩均匀度 [1/1]                           :@bug:
   - [X] 用最新每日编译试试看 shading 问题
     - 还是有 shading 问题
   - [X] 确认算法库是否调用到专用的
@@ -151,7 +172,7 @@ $5='(substring (number-to-string $pi) (round $4) (1+ (round $4)));N
     + 例子图片
   - [X] 提供无法开机的log
   - [X] 换成读取系统属性
-**** DONE [B161010-854] 调节曝光补偿 [4/4]                             :bugs:
+**** DONE [B161010-854] 调节曝光补偿 [4/4]                             :@bug:
   - [X] 刷机
   - [X] 验证
     - 验证不出来，转给求明
@@ -159,9 +180,9 @@ $5='(substring (number-to-string $pi) (round $4) (1+ (round $4)));N
   - [X] 祥玉:加规避
 
 
-*** PD1617 [5/5]                                                      :works:
-**** DONE 给海叔编个库
-**** DONE 添加76pro的代码
+*** PD1617 [5/5] <2016-09-19 周一>--<2016-12-02 周五>
+**** DONE 给海叔编个库 
+**** DONE 添加76pro的代码 
 **** DONE 寄往日本的 golden 手机状态
      PD1617_A_A09.30.07
 **** DONE porting checklist [11/11]
@@ -177,8 +198,6 @@ $5='(substring (number-to-string $pi) (round $4) (1+ (round $4)));N
     - [X]  led calibration
     - [X]  mcas
 **** DONE 2016.10.10 给出 golden
-
-
 
 
 
