--- a/org/vivo.org
+++ b/org/vivo.org
@@ -3,7 +3,7 @@
 
 * temporary [4/5]
   SCHEDULED: <2016-10-19 周三>
-  
+  CLOCK: [2016-10-19 周三 09:42]--[2016-10-19 周三 09:44] =>  0:02
 ** TODO 修改答辩ppt
    - State "TODO"       from "DONE"       [2016-10-19 周三 09:11]
 *** DONE 例子加上数据、对比   多加几个例子
@@ -49,7 +49,7 @@
 
 * 项目
 #+TAGS: @bug(b)
-** TODO PD1616 [13/13] <2016-07-20 周三>--<2016-10-31 周一>
+** PD1616 [13/14] <2016-07-20 周三>--<2016-10-31 周一>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 *** DONE 把保密外壳的螺钉装上
 *** DONE 拷10.15~10.17的照片
@@ -106,8 +106,13 @@
 *** DONE [B161011-671] 调节曝光补偿                                    :@bug:
  - 同 B161010-854 已做规避
 
+*** TODO [B161018-700] AcuteLogic segment fault                        :@bug:
+    DEADLINE: <2016-10-20 周四>
+    - State "TODO"       from ""           [2016-10-19 周三 10:17]
+      已发送邮件给安奇逻辑
+
    
-** TODO PD1616LG4 [2/2] <2016-07-20 周三>--<2016-10-31 周一>
+** PD1616LG4 [2/2] <2016-07-20 周三>--<2016-10-31 周一>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 *** DONE [B160922-269] 像面色彩均匀度 [1/1]                            :@bug:
  - [X] 用最新每日编译试试看 shading 问题
@@ -138,7 +143,7 @@
  - [X] 祥玉:加规避
 
 
-** TODO PD1617 [5/5] <2016-09-19 周一>--<2016-12-02 周五>
+** PD1617 [5/5] <2016-09-19 周一>--<2016-12-02 周五>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 *** DONE 给海叔编个库 
 *** DONE 添加76pro的代码 
