--- a/org/vivo.org
+++ b/org/vivo.org
@@ -1,10 +1,13 @@
 
 
 
-* temporary [4/5]
+* temporary [5/6]
   SCHEDULED: <2016-10-19 周三>
   CLOCK: [2016-10-19 周三 09:42]--[2016-10-19 周三 09:44] =>  0:02
-** TODO 修改答辩ppt
+** TODO [#A] 修改答辩ppt
+   SCHEDULED: <2016-11-06 周日> DEADLINE: <2016-10-30 周日>
+   CLOCK: [2016-10-19 周三 14:50]--[2016-10-19 周三 15:18] =>  0:28
+   CLOCK: [2016-10-19 周三 12:05]--[2016-10-19 周三 14:50] =>  2:45
    - State "TODO"       from "DONE"       [2016-10-19 周三 09:11]
 *** DONE 例子加上数据、对比   多加几个例子
 **** DONE PD1515BA清晰度噪点
@@ -14,10 +17,12 @@
 **** DONE 1419CL 偏色
 *** TODO 知道原理
     - State "TODO"       from ""           [2016-10-19 周三 09:11]
-      小东说的shutter之类的
-      例子的修改理由
+    - [ ] 小东说的shutter之类的
+    - [ ] 例子的修改理由
 *** TODO 自己试着说一下
     - State "TODO"       from ""           [2016-10-19 周三 09:12]
+    - [ ] 拟稿并测试时间
+    - [ ] 背诵
 ** DONE 取临时厂牌
 ** DONE 找刘海兵刷机(pd1616a)
 ** DONE 放行单 [4/4]
@@ -25,17 +30,19 @@
 - [X] 在放行单中添加已贴保密封条
 - [X] 1616至10.30
 - [X] 1619至12.15
+** DONE 寄模组给徐永富 [3/3]
+   CLOSED: [2016-10-19 周三 11:17]
+   - State "DONE"       from "TODO"       [2016-10-19 周三 11:17]
+   - State "TODO"       from ""           [2016-10-19 周三 10:43]
+   - [X] 挑选 PD1619 MTF gloden和随便一颗
+     - MTF golden 和 awb limit
+   - [X] 放行单
+   - [X] 寄前台
 ** DONE 潘陈军
  - 高通 fae 名字 : 张延伟 杨洋（刚下飞机）
  - 小黄整理的问题 -> 和高通沟通 -> 开始干活
  - 图片&问题点在 C:\peter\2p7
  - 最新的参数在 C:\peter\2p7\head
-
-
-
-
-
-
 
 
 * TODO 出差长安记得带回去的 [0/5]
@@ -49,8 +56,20 @@
 
 * 项目
 #+TAGS: @bug(b)
-** PD1616 [13/14] <2016-07-20 周三>--<2016-10-31 周一>
+** PD1616 [13/15] <2016-07-20 周三>--<2016-10-31 周一>
+   SCHEDULED: <2016-10-31 周一>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
+
+*** TODO raw 图 [2/3]
+    DEADLINE: <2016-10-20 周四>
+    - State "TODO"       from ""           [2016-10-19 周三 16:56]
+    - [X] 提供图片
+    - [X] 提供数据
+    - [ ] 计算方式
+*** TODO [B161018-700] AcuteLogic segment fault                        :@bug:
+    SCHEDULED: <2016-10-20 周四>
+    - State "TODO"       from ""           [2016-10-19 周三 10:17]
+      已发送邮件给安奇逻辑
 *** DONE 把保密外壳的螺钉装上
 *** DONE 拷10.15~10.17的照片
 *** DONE 王永国，明度xxxx
@@ -106,14 +125,10 @@
 *** DONE [B161011-671] 调节曝光补偿                                    :@bug:
  - 同 B161010-854 已做规避
 
-*** TODO [B161018-700] AcuteLogic segment fault                        :@bug:
-    DEADLINE: <2016-10-20 周四>
-    - State "TODO"       from ""           [2016-10-19 周三 10:17]
-      已发送邮件给安奇逻辑
 
    
 ** PD1616LG4 [2/2] <2016-07-20 周三>--<2016-10-31 周一>
-   - State "TODO"       from ""           [2016-10-19 周三 09:16]
+   SCHEDULED: <2016-10-31 周一>
 *** DONE [B160922-269] 像面色彩均匀度 [1/1]                            :@bug:
  - [X] 用最新每日编译试试看 shading 问题
    - 还是有 shading 问题
@@ -144,6 +159,7 @@
 
 
 ** PD1617 [5/5] <2016-09-19 周一>--<2016-12-02 周五>
+   SCHEDULED: <2016-12-02 周五>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 *** DONE 给海叔编个库 
 *** DONE 添加76pro的代码 
