--- a/org/vivo.org
+++ b/org/vivo.org
@@ -45,7 +45,7 @@
  - 最新的参数在 C:\peter\2p7\head
 
 
-* TODO 出差长安记得带回去的 [0/5]
+* 出差长安记得带回去的 [0/5]
   SCHEDULED: <2016-10-16 周日>
  - [ ] 台式机 x2
  - [ ] 插板 x1
@@ -56,18 +56,25 @@
 
 * 项目
 #+TAGS: @bug(b)
-** PD1616 [13/15] <2016-07-20 周三>--<2016-10-31 周一>
+** PD1616 [14/15] <2016-07-20 周三>--<2016-10-31 周一>
    SCHEDULED: <2016-10-31 周一>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 
-*** TODO raw 图 [2/3]
+*** TODO raw 图 [3/4]
     DEADLINE: <2016-10-20 周四>
     - State "TODO"       from ""           [2016-10-19 周三 16:56]
     - [X] 提供图片
     - [X] 提供数据
-    - [ ] 计算方式
-*** TODO [B161018-700] AcuteLogic segment fault                        :@bug:
-    SCHEDULED: <2016-10-20 周四>
+    - [X] 计算逻辑
+      - 看不懂
+    - [ ] 模组厂重新提供 DLL
+      - 无法调用
+*** DONE [B161018-700] AcuteLogic segment fault                        :@bug:
+    CLOSED: [2016-10-20 周四 17:20] SCHEDULED: <2016-10-20 周四>
+    - State "DONE"       from "TODO"       [2016-10-20 周四 17:20] \\
+      安奇逻辑分析为 log 太多导致
+      关掉 log 即可
+      于是不作处理
     - State "TODO"       from ""           [2016-10-19 周三 10:17]
       已发送邮件给安奇逻辑
 *** DONE 把保密外壳的螺钉装上
