--- a/org/vivo.org
+++ b/org/vivo.org
@@ -60,14 +60,14 @@
    SCHEDULED: <2016-10-31 周一>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 
-*** TODO raw 图 [3/4]
+*** TODO raw 图 [4/4]
     DEADLINE: <2016-10-20 周四>
     - State "TODO"       from ""           [2016-10-19 周三 16:56]
     - [X] 提供图片
     - [X] 提供数据
     - [X] 计算逻辑
       - 看不懂
-    - [ ] 模组厂重新提供 DLL
+    - [X] 模组厂重新提供 DLL
       - 无法调用
 *** DONE [B161018-700] AcuteLogic segment fault                        :@bug:
     CLOSED: [2016-10-20 周四 17:20] SCHEDULED: <2016-10-20 周四>
