--- a/org/vivo.org
+++ b/org/vivo.org
@@ -1,9 +1,11 @@
 
 
 
-* temporary [5/6]
+* temporary [5/7]
   SCHEDULED: <2016-10-19 周三>
   CLOCK: [2016-10-19 周三 09:42]--[2016-10-19 周三 09:44] =>  0:02
+** TODO 3a r10809-1...r10810-1
+   - State "TODO"       from ""           [2016-10-25 周二 21:43]
 ** TODO [#A] 修改答辩ppt
    SCHEDULED: <2016-11-06 周日> DEADLINE: <2016-10-30 周日>
    CLOCK: [2016-10-19 周三 14:50]--[2016-10-19 周三 15:18] =>  0:28
@@ -56,11 +58,13 @@
 
 * 项目
 #+TAGS: @bug(b)
-** PD1616 [14/15] <2016-07-20 周三>--<2016-10-31 周一>
+** PD1616 [14/16] <2016-07-20 周三>--<2016-10-31 周一>
    SCHEDULED: <2016-10-31 周一>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 
-*** TODO raw 图 [4/5]
+*** TODO [B161024-461] AcuteLogic face 除零                            :@bug:
+    - State "TODO"       from ""           [2016-10-25 周二 21:42]
+*** TODO raw 图 [4/4]
     DEADLINE: <2016-10-20 周四>
     - State "TODO"       from ""           [2016-10-19 周三 16:56]
     - [X] 提供图片
@@ -68,8 +72,7 @@
     - [X] 计算逻辑
       - 看不懂
     - [X] 模组厂重新提供 DLL
-      - 无法调用
-    - [ ]
+      - 已调用
 *** DONE [B161018-700] AcuteLogic segment fault                        :@bug:
     CLOSED: [2016-10-20 周四 17:20] SCHEDULED: <2016-10-20 周四>
     - State "DONE"       from "TODO"       [2016-10-20 周四 17:20] \\
@@ -166,10 +169,12 @@
  - [X] 祥玉:加规避
 
 
-** PD1617 [7/8] <2016-09-19 周一>--<2016-12-02 周五>
+** PD1617 [8/8] <2016-09-19 周一>--<2016-12-02 周五>
    SCHEDULED: <2016-12-02 周五>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
-*** TODO 寄1617、1619回去给永富
+*** DONE 寄1617、1619回去给永富
+    CLOSED: [2016-10-25 周二 09:19]
+    - State "DONE"       from "TODO"       [2016-10-25 周二 09:19]
     - State "TODO"       from ""           [2016-10-24 周一 17:50]
 *** DONE 新机器发放行单
     CLOSED: [2016-10-24 周一 22:46]
