--- a/org/vivo.org
+++ b/org/vivo.org
@@ -1,13 +1,15 @@
 
 
 
-* temporary [5/7]
+* temporary [6/7]
   SCHEDULED: <2016-10-19 周三>
   CLOCK: [2016-10-19 周三 09:42]--[2016-10-19 周三 09:44] =>  0:02
-** TODO 3a r10809-1...r10810-1
+** DONE 3a r10809-1...r10810-1
+   CLOSED: [2016-10-28 周五 12:07]
+   - State "DONE"       from "TODO"       [2016-10-28 周五 12:07]
    - State "TODO"       from ""           [2016-10-25 周二 21:43]
 ** TODO [#A] 修改答辩ppt
-   SCHEDULED: <2016-11-06 周日> DEADLINE: <2016-10-30 周日>
+   SCHEDULED: <2016-11-03 周四> DEADLINE: <2016-11-03 周四>
    CLOCK: [2016-10-19 周三 14:50]--[2016-10-19 周三 15:18] =>  0:28
    CLOCK: [2016-10-19 周三 12:05]--[2016-10-19 周三 14:50] =>  2:45
    - State "TODO"       from "DONE"       [2016-10-19 周三 09:11]
@@ -47,6 +49,7 @@
  - 最新的参数在 C:\peter\2p7\head
 
 
+
 * 出差长安记得带回去的 [0/5]
   SCHEDULED: <2016-10-16 周日>
  - [ ] 台式机 x2
@@ -56,14 +59,29 @@
  - [ ] PD1415D PD1415BA
 
 
+
 * 项目
 #+TAGS: @bug(b)
-** PD1616 [14/16] <2016-07-20 周三>--<2016-10-31 周一>
+#+TAGS: @量产前必解(x)
+** PD1616 [14/19] 
    SCHEDULED: <2016-10-31 周一>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 
-*** TODO [B161024-461] AcuteLogic face 除零                            :@bug:
+*** TODO [B161026-120] 3800K强闪偏蓝                            :@bug:@量产前必解:
+    DEADLINE: <2016-10-30 周日>
+    - State "TODO"       from ""           [2016-10-28 周五 11:55]
+*** TODO [B161026-117] ISO 人物偏灰                             :@bug:@量产前必解:
+    DEADLINE: <2016-10-30 周日>
+    - State "TODO"       from ""           [2016-10-28 周五 11:54]
+*** TODO [B161026-206] 用例10模式切换                           :@bug:@量产前必解:
+    DEADLINE: <2016-10-30 周日>
+    - State "TODO"       from ""           [2016-10-28 周五 11:48]
+    - v-85b175f59314fc9a1ff74c038ed7b5e52c90e405
+    - aec_process.c:3903
+*** TODO [B161024-461] AcuteLogic face 除零                     :@bug:@量产前必解:
+    DEADLINE: <2016-10-30 周日>
     - State "TODO"       from ""           [2016-10-25 周二 21:42]
+    - 安奇逻辑下一版解
 *** TODO raw 图 [4/4]
     DEADLINE: <2016-10-20 周四>
     - State "TODO"       from ""           [2016-10-19 周三 16:56]
@@ -138,8 +156,7 @@
 
 
    
-** PD1616LG4 [2/2] <2016-07-20 周三>--<2016-10-31 周一>
-   SCHEDULED: <2016-10-31 周一>
+** PD1616LG4 [2/2] 
 *** DONE [B160922-269] 像面色彩均匀度 [1/1]                            :@bug:
  - [X] 用最新每日编译试试看 shading 问题
    - 还是有 shading 问题
@@ -169,9 +186,14 @@
  - [X] 祥玉:加规避
 
 
-** PD1617 [8/8] <2016-09-19 周一>--<2016-12-02 周五>
+** PD1617/PD1619 [8/10] 
    SCHEDULED: <2016-12-02 周五>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
+*** TODO [B161023-299] ev_extend                                       :@bug:
+    - State "TODO"       from ""           [2016-10-28 周五 12:03]
+*** TODO [B161023-233] HDR 偏蓝                                        :@bug:
+    - State "TODO"       from ""           [2016-10-28 周五 12:01]
+    - 安奇逻辑下一版解
 *** DONE 寄1617、1619回去给永富
     CLOSED: [2016-10-25 周二 09:19]
     - State "DONE"       from "TODO"       [2016-10-25 周二 09:19]
@@ -202,4 +224,16 @@
    - [X]  mcas
 *** DONE 2016.10.10 给出 golden
 
+
+** PD1621 [0/1] 
+*** TODO [B161018-885] 用例13滤镜                               :@bug:@量产前必解:
+    DEADLINE: <2016-10-30 周日>
+    - State "TODO"       from ""           [2016-10-28 周五 11:46]
+    - aec_process.c:1983
+
+
+
+** TD1605 [0/1]
+*** TODO [B161019-587] ev_range                                        :@bug:
+    - State "TODO"       from ""           [2016-10-28 周五 12:06]
 
