--- a/org/vivo.org
+++ b/org/vivo.org
@@ -63,23 +63,36 @@
 * 项目
 #+TAGS: @bug(b)
 #+TAGS: @量产前必解(x)
-** PD1616 [14/19] 
+#+TODO: TODO(t@/!) 新的(1@/!) 正在处理(2@/!) 重新打开(3@/!) 延后处理(4@/!) | DONE(d@/!) 解决待关闭(5@/!) 不做处理(6@/!) 退回(7@/!) 关闭(8@/!) 转给他人(9@/!)
+** PD1616 [18/19] 
    SCHEDULED: <2016-10-31 周一>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 
-*** TODO [B161026-120] 3800K强闪偏蓝                            :@bug:@量产前必解:
-    DEADLINE: <2016-10-30 周日>
+*** 解决待关闭 [B161026-120] 3800K强闪偏蓝                      :@bug:@量产前必解:
+    CLOSED: [2016-10-29 周六 20:13] DEADLINE: <2016-10-30 周日>
+    - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:13]
+    - State "正在处理"   from "新的"       [2016-10-29 周六 15:26]
+    - State "新的"       from "TODO"       [2016-10-29 周六 15:12]
     - State "TODO"       from ""           [2016-10-28 周五 11:55]
-*** TODO [B161026-117] ISO 人物偏灰                             :@bug:@量产前必解:
-    DEADLINE: <2016-10-30 周日>
+*** 解决待关闭 [B161026-117] ISO 人物偏灰                       :@bug:@量产前必解:
+    CLOSED: [2016-10-29 周六 20:12] DEADLINE: <2016-10-30 周日>
+    - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:12]
+    - State "正在处理"   from "新的"       [2016-10-29 周六 15:26]
+    - State "新的"       from "TODO"       [2016-10-29 周六 15:12]
     - State "TODO"       from ""           [2016-10-28 周五 11:54]
-*** TODO [B161026-206] 用例10模式切换                           :@bug:@量产前必解:
-    DEADLINE: <2016-10-30 周日>
+*** 解决待关闭 [B161026-206] 用例10模式切换                     :@bug:@量产前必解:
+    CLOSED: [2016-10-29 周六 20:09] DEADLINE: <2016-10-30 周日>
+    - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:09]
+    - State "正在处理"   from "新的"       [2016-10-29 周六 15:26]
+    - State "新的"       from "TODO"       [2016-10-29 周六 15:12]
     - State "TODO"       from ""           [2016-10-28 周五 11:48]
     - v-85b175f59314fc9a1ff74c038ed7b5e52c90e405
     - aec_process.c:3903
-*** TODO [B161024-461] AcuteLogic face 除零                     :@bug:@量产前必解:
-    DEADLINE: <2016-10-30 周日>
+*** 解决待关闭 [B161024-461] AcuteLogic face 除零               :@bug:@量产前必解:
+    CLOSED: [2016-10-29 周六 20:11] DEADLINE: <2016-10-30 周日>
+    - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:11]
+    - State "正在处理"   from "新的"       [2016-10-29 周六 15:26]
+    - State "新的"       from "TODO"       [2016-10-29 周六 15:16]
     - State "TODO"       from ""           [2016-10-25 周二 21:42]
     - 安奇逻辑下一版解
 *** TODO raw 图 [4/4]
@@ -91,8 +104,9 @@
       - 看不懂
     - [X] 模组厂重新提供 DLL
       - 已调用
-*** DONE [B161018-700] AcuteLogic segment fault                        :@bug:
+*** 不做处理 [B161018-700] AcuteLogic segment fault                    :@bug:
     CLOSED: [2016-10-20 周四 17:20] SCHEDULED: <2016-10-20 周四>
+    - State "不做处理"   from "DONE"       [2016-10-29 周六 15:17]
     - State "DONE"       from "TODO"       [2016-10-20 周四 17:20] \\
       安奇逻辑分析为 log 太多导致
       关掉 log 即可
@@ -138,7 +152,8 @@
  - [X] 发单
  - [X] 刷机
  - [X] push 库文件并验证 exif 信息
-*** DONE [B161009-455] 手动白平衡 2300K [4/4]                          :@bug:
+*** 关闭 [B161009-455] 手动白平衡 2300K [4/4]                          :@bug:
+    - State "关闭"       from "DONE"       [2016-10-29 周六 15:18]
  - [X] 刷机
  - [X] 验证
  - 转给杨涛看
@@ -147,17 +162,20 @@
  - [X] set_parm_whitebalance 不应该被调用到 
  - [X] 处理不了，交给安奇逻辑
    - 已做兼容
-*** DONE [B160930-465] log管控 [2/2]                                   :@bug:
+*** 关闭 [B160930-465] log管控 [2/2]                                   :@bug:
+    - State "关闭"       from "DONE"       [2016-10-29 周六 15:18]
  - [X] 刷机
  - [X] 验证
  - 下一版设成自动关闭
-*** DONE [B161011-671] 调节曝光补偿                                    :@bug:
+*** 解决待关闭 [B161011-671] 调节曝光补偿                              :@bug:
+    - State "解决待关闭" from "DONE"       [2016-10-29 周六 15:19]
  - 同 B161010-854 已做规避
 
 
    
 ** PD1616LG4 [2/2] 
-*** DONE [B160922-269] 像面色彩均匀度 [1/1]                            :@bug:
+*** 关闭 [B160922-269] 像面色彩均匀度 [1/1]                            :@bug:
+    - State "关闭"       from "DONE"       [2016-10-29 周六 15:19]
  - [X] 用最新每日编译试试看 shading 问题
    - 还是有 shading 问题
  - [X] 确认算法库是否调用到专用的
@@ -169,7 +187,8 @@
  - [X] 提供 meshrolloff 的版本
  - [X] 提供 f3 版本 + no_meshrolloff 给廖秒干
    - 进入相机方式不同颜色差异很大
-**** DONE 两套参数接口 [4/4]
+**** 关闭 两套参数接口 [4/4]
+     - State "关闭"       from "DONE"       [2016-10-29 周六 15:19]
  - [X] 拟制方案
    项目宏控
  - [X] 发邮件确认
@@ -178,7 +197,8 @@
    + 例子图片
  - [X] 提供无法开机的log
  - [X] 换成读取系统属性
-*** DONE [B161010-854] 调节曝光补偿 [4/4]                              :@bug:
+*** 关闭 [B161010-854] 调节曝光补偿 [4/4]                              :@bug:
+    - State "关闭"       from "DONE"       [2016-10-29 周六 15:19]
  - [X] 刷机
  - [X] 验证
    - 验证不出来，转给求明
@@ -186,12 +206,17 @@
  - [X] 祥玉:加规避
 
 
-** PD1617/PD1619 [8/10] 
+** PD1617/PD1619 [10/10] 
    SCHEDULED: <2016-12-02 周五>
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
-*** TODO [B161023-299] ev_extend                                       :@bug:
+*** 解决待关闭 [B161023-299] ev_extend                                 :@bug:
+    CLOSED: [2016-10-29 周六 15:16]
+    - State "解决待关闭" from "TODO"       [2016-10-29 周六 15:16]
     - State "TODO"       from ""           [2016-10-28 周五 12:03]
-*** TODO [B161023-233] HDR 偏蓝                                        :@bug:
+*** 解决待关闭 [B161023-233] HDR 偏蓝                                  :@bug:
+    CLOSED: [2016-10-29 周六 20:16]
+    - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:16]
+    - State "正在处理"   from "TODO"       [2016-10-29 周六 15:15]
     - State "TODO"       from ""           [2016-10-28 周五 12:01]
     - 安奇逻辑下一版解
 *** DONE 寄1617、1619回去给永富
@@ -225,15 +250,24 @@
 *** DONE 2016.10.10 给出 golden
 
 
-** PD1621 [0/1] 
-*** TODO [B161018-885] 用例13滤镜                               :@bug:@量产前必解:
-    DEADLINE: <2016-10-30 周日>
+** PD1621 [1/1] 
+*** 解决待关闭 [B161018-885] 用例13滤镜                         :@bug:@量产前必解:
+    CLOSED: [2016-10-29 周六 20:25] DEADLINE: <2016-10-30 周日>
+    - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:25]
+    - State "正在处理"   from "TODO"       [2016-10-29 周六 15:11]
     - State "TODO"       from ""           [2016-10-28 周五 11:46]
     - aec_process.c:1983
 
 
 
-** TD1605 [0/1]
-*** TODO [B161019-587] ev_range                                        :@bug:
+** TD1605(8917) [1/1]
+*** 转给他人 [B161019-587] ev_range                                    :@bug:
+    CLOSED: [2016-10-29 周六 15:01]
+    - State "转给他人"   from "解决待关闭" [2016-10-29 周六 15:21] \\
+      低端平台不维护3a代码
+      转给求明
+      给高通提case
+    - State "解决待关闭" from "DONE"       [2016-10-29 周六 15:10]
+    - State "DONE"       from "TODO"       [2016-10-29 周六 15:01]
     - State "TODO"       from ""           [2016-10-28 周五 12:06]
 
