--- a/org/vivo.org
+++ b/org/vivo.org
@@ -69,19 +69,19 @@
    - State "TODO"       from ""           [2016-10-19 周三 09:16]
 
 *** 解决待关闭 [B161026-120] 3800K强闪偏蓝                      :@bug:@量产前必解:
-    CLOSED: [2016-10-29 周六 20:13] DEADLINE: <2016-10-30 周日>
+    CLOSED: [2016-10-29 周六 20:13] DEADLINE: <2016-10-29 周六>
     - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:13]
     - State "正在处理"   from "新的"       [2016-10-29 周六 15:26]
     - State "新的"       from "TODO"       [2016-10-29 周六 15:12]
     - State "TODO"       from ""           [2016-10-28 周五 11:55]
 *** 解决待关闭 [B161026-117] ISO 人物偏灰                       :@bug:@量产前必解:
-    CLOSED: [2016-10-29 周六 20:12] DEADLINE: <2016-10-30 周日>
+    CLOSED: [2016-10-29 周六 20:12] DEADLINE: <2016-10-29 周六>
     - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:12]
     - State "正在处理"   from "新的"       [2016-10-29 周六 15:26]
     - State "新的"       from "TODO"       [2016-10-29 周六 15:12]
     - State "TODO"       from ""           [2016-10-28 周五 11:54]
 *** 解决待关闭 [B161026-206] 用例10模式切换                     :@bug:@量产前必解:
-    CLOSED: [2016-10-29 周六 20:09] DEADLINE: <2016-10-30 周日>
+    CLOSED: [2016-10-29 周六 20:09] DEADLINE: <2016-10-29 周六>
     - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:09]
     - State "正在处理"   from "新的"       [2016-10-29 周六 15:26]
     - State "新的"       from "TODO"       [2016-10-29 周六 15:12]
@@ -89,7 +89,7 @@
     - v-85b175f59314fc9a1ff74c038ed7b5e52c90e405
     - aec_process.c:3903
 *** 解决待关闭 [B161024-461] AcuteLogic face 除零               :@bug:@量产前必解:
-    CLOSED: [2016-10-29 周六 20:11] DEADLINE: <2016-10-30 周日>
+    CLOSED: [2016-10-29 周六 20:11] DEADLINE: <2016-10-29 周六>
     - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:11]
     - State "正在处理"   from "新的"       [2016-10-29 周六 15:26]
     - State "新的"       from "TODO"       [2016-10-29 周六 15:16]
@@ -252,7 +252,7 @@
 
 ** PD1621 [1/1] 
 *** 解决待关闭 [B161018-885] 用例13滤镜                         :@bug:@量产前必解:
-    CLOSED: [2016-10-29 周六 20:25] DEADLINE: <2016-10-30 周日>
+    CLOSED: [2016-10-29 周六 20:25] DEADLINE: <2016-10-29 周六>
     - State "解决待关闭" from "正在处理"   [2016-10-29 周六 20:25]
     - State "正在处理"   from "TODO"       [2016-10-29 周六 15:11]
     - State "TODO"       from ""           [2016-10-28 周五 11:46]
